--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.3.3",
+    "@types/bcryptjs": "2.4.2",
     "prisma": "4.16.2",
     "tsup": "^7.1.0",
     "tsx": "^3.12.7",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "@prisma/client": "4.16.2",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.3.1",
     "fastify": "^4.19.2",
     "zod": "3.21.4"
